cot/tests/snapshot_testing/migration/snapshots/cli__snapshot_testing__migration__migration_engine_rollback_single_app.snap
---
source: cot/tests/snapshot_testing/migration/mod.rs
expression: "dry_run_snapshot(&engine, &test_db.database(), &mut output, \"0001\",\n\"rollback_app1\").await"
---
Rollback dry run

Target:
  app:       rollback_app1
  migration: 0001
  mode:      exclusive (target migration remains applied)

Rollback plan:
  1. rollback_app1::m_0003_third
  2. rollback_app1::m_0002_second

Summary:
  to roll back:     2
  skipped:          0
  database changes: none
